--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "cq-source-ns1",
+  "name": "@guardian/cq-source-ns1",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "test": "jest --detectOpenHandles",
