--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "echo TODO",
     "lint": "eslint src/** --ext .ts --no-error-on-unmatched-pattern",
     "format": "prettier --write src/**/*.ts",
     "build": "tsc",
@@ -14,13 +14,10 @@
     "@guardian/eslint-config-typescript": "7.0.0",
     "@guardian/prettier": "5.0.0",
     "@guardian/tsconfig": "0.2.0",
-    "@types/jest": "^29.5.4",
     "@types/node": "20.5.3",
     "eslint": "^8.48.0",
     "eslint-plugin-prettier": "5.0.0",
-    "jest": "^29.6.4",
     "prettier": "^3.0.2",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   },
