--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@guardian/tsconfig/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "moduleResolution": "nodenext"
+    "moduleResolution": "nodenext",
+    "skipLibCheck": true
   }
 }
