--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/** --ext .ts --no-error-on-unmatched-pattern",
     "format": "prettier --write src/**/*.ts",
     "build": "tsc",
-    "start": "ts-node --esm src/index.ts serve",
+    "start": "tsx src/index.ts serve",
     "test:integration": "cloudquery sync config.yml --log-level debug"
   },
   "dependencies": {
@@ -23,7 +23,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "5.1.2",
     "prettier": "^3.0.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "5.1.6"
   },
   "prettier": "@guardian/prettier",
